<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHardware"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_hardware"
        android:title="@string/hardware" />

    <item
        android:id="@+id/menuApplications"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_android"
        android:title="@string/applications" />

    <item
        android:id="@+id/menuTemperature"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_temperature"
        android:title="@string/temp" />

    <item
        android:id="@+id/menuSettings"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>
...
